@@ -1,4 +1,4 @@
-# Copyright (C) 2013 Zentyal S.L.
+# Copyright (C) 2013-2014 Zentyal S.L.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License, version 2, as
@@ -39,7 +39,7 @@ sub _process
     $self->_requireParam('dn', 'dn');
     my $dn = $self->unsafeParam('dn');
 
-    my $addGroup = $dn =~ /^ou=Groups,/;
+    my $addGroup = $dn =~ /^CN=Groups,/;
 
     push (@args, dn => $dn);
     push (@args, addGroup => $addGroup);
